Changelog v5.1.75 (2024-03-06):
- Fixed monitor bug

Changelog v5.1.74 (2024-03-04):
- Fixed Freezing and Cache this time

Changelog v5.1.73 (2024-03-01):
- Optimized Player for Embeds
- Fixed Freezing and hopefully Cache with Player

Changelog v5.1.72 (2024-02-28):
- Added Movies, TV shows, TV Shorts Menus
- Added Specials, OVAs, ONAs Menus
- Added Music Videos, Genres, Search Menus
- Recoded Menu Customization Settings Category
- Fixed Premiumize Cloud Searching

Changelog v5.1.71 (2024-02-23):
- Added EasyDebrid

Changelog v5.1.70 (2024-02-20):
- Added New Setting "Skip UnCached Sources (Real-Debrid, AllDebrid)"
- Added more meta to last Watched
- Fixed Caching for Embeds hopefully
- Fixed Batch Search for Mal Meta

Changelog v5.1.69 (2024-02-20):
- Added Anidb Episode Meta

Changelog v5.1.68 (2024-02-17):
- Added Trakt Scrobbler Settings to Watchlist

Changelog v5.1.67 (2024-02-16):
- Improved Scraping for Animetosho
- Rescrape works as intended now

Changelog v5.1.66 (2024-02-13):
- Added Votes with Ratings for Anilist

Changelog v5.1.65 (2024-02-13):
- Fixed UpNext Stuff
- Added Some Stuff to Episode Meta
- Made Anilist Calendar load faster

Changelog v5.1.64 (2024-02-13):
- Small Fix with New Playback Setting
- Added Genres to Episode Meta

Changelog v5.1.63 (2024-02-11):
- Added New Playback Setting for Playlist
- Made Mal Calendars load faster

Changelog v5.1.62 (2024-02-10):
- Added the ability to change Anilist Posters to Mal Posters

Changelog v5.1.61 (2024-02-09):
- Added Clearlogos to Episode Meta

Changelog v5.1.60 (2024-02-08):
- Fixed Small bug with Torrents
- Changed Sync Setting Default

Changelog v5.1.59 (2024-02-05):
- Fixed Autoplay for Embeds

Changelog v5.1.58 (2024-02-04):
- Fixed Gogo

Changelog v5.1.57 (2024-02-03):
- Improved Cloud Scraping
- Improved Local Scraping
- Improved Filtering

Changelog v5.1.56 (2024-02-02):
- Improved the crap out of Debrid Scraping
- Small Fix for Premiumize
- Fixed major episode meta bug